--- a/index.html
+++ b/index.html
@@ -5,48 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка Студія-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo"> <span class="logo-text">Web</span>Studio</a>
+        <ul class="site-nav">
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--Герой-->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <!--Переваги студії-->
-      <section>
+      <section class="section">
         <h2>Переваги Студії</h2>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="section-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
             <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="section-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
             <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="section-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
             <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="section-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -78,42 +87,44 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
+      <section class="section team">
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./images/igor.jpg" alt="Співробітник компанії Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p class="section-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga.jpg" alt="Співробітник компанії Ольга Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="section-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/mikola.jpg" alt="Співробітник компанії Микола Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img src="./images/micha.jpg" alt="Співробітник компанії Михайло Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
       <address>
         <ul>
           <li>
-            <a href="#">м. Київ, пр-т Лесі Українки, 26 <br /></a>
+            <a href="#" class="footer-address">м. Київ, пр-т Лесі Українки, 26 <br /></a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
-          <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a><br />
+          </li>
+          <li><a href="tel:380961111111" class="footer-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
