--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
@@ -24,10 +25,10 @@
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <h1>Ресурси веб-студії</h1>
+        <h2>Фільтри</h2>
         <ul>
-          <h2>Фільтри</h2>
           <li>
             <button type="button">Усі</button>
           </li>
@@ -44,63 +45,79 @@
             <button type="button">Маркетинг</button>
           </li>
         </ul>
+        <h2>Перелік ресурсів</h2>
         <ul>
-          <h2>Перелік ресурсів</h2>
-          <ul>
-            <li>
-              <img src="./images/technokr.jpg" alt="Веб-сайт технокряк" width="370" />
+          <li>
+            <a href=""
+              ><img src="./images/technokr.jpg" alt="Веб-сайт технокряк" width="370" />
               <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
-            </li>
-            <li>
-              <img src="./images/poster.jpg" alt="Постер два баскетболісти з м'ячем" width="370" />
+              <p class="section-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/poster.jpg" alt="Постер два баскетболісти з м'ячем" width="370" />
               <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/restaurant.jpg" alt="Логотип ресторану Сіфуд" width="370" />
+              <p class="section-text">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/restaurant.jpg" alt="Логотип ресторану Сіфуд" width="370" />
               <h3>Ресторан Seafood</h3>
-              <p>Додаток</p>
-            </li>
-            <li>
-              <img src="./images/headphones.jpg" alt="Навушники чорного кольору" width="370" />
+              <p class="section-text">Додаток</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/headphones.jpg" alt="Навушники чорного кольору" width="370" />
               <h3>Проєкт Prime</h3>
-              <p>Маркетинг</p>
-            </li>
-            <li>
-              <img
+              <p class="section-text">Маркетинг</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img
                 src="./images/boxes.jpg"
                 alt="Одна коробочка білого кольору друга коробочка тілесного кольору"
                 width="370"
               />
               <h3>Проєкт Boxes</h3>
-              <p>Додаток</p>
-            </li>
-            <li>
-              <img src="./images/monitor.jpg" alt="Монітор комп'ютера" width="370" />
+              <p class="section-text">Додаток</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/monitor.jpg" alt="Монітор комп'ютера" width="370" />
               <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
-            </li>
-            <li>
-              <img
+              <p class="section-text">Веб-сайт</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img
                 src="./images/magazin.jpg"
                 alt="Розгорнутий журнал Limited Edition"
                 width="370"
               />
               <h3>Видання Limited Edition</h3>
-              <p>Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/birka.jpg" alt="Бірка LAB" width="370" />
+              <p class="section-text">Дизайн</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/birka.jpg" alt="Бірка LAB" width="370" />
               <h3>Проєкт LAB</h3>
-              <p>Маркетинг</p>
-            </li>
-            <li>
-              <img src="./images/notebook.jpg" alt="Робота людини за ноутбуком" width="370" />
+              <p class="section-text">Маркетинг</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/notebook.jpg" alt="Робота людини за ноутбуком" width="370" />
               <h3>Growing Business</h3>
-              <p>Додаток</p>
-            </li>
-          </ul>
+              <p class="section-text">Додаток</p></a
+            >
+          </li>
         </ul>
       </section>
     </main>
