--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <!-- Шапка Студія-->
     <header>
-      <nav>
+      <nav class="site-nav">
         <a href="./index.html" class="logo"> <span class="logo-text">Web</span>Studio</a>
-        <ul class="site-nav">
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact">
+      <ul class="list-contact">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
