--- a/portfolio.html
+++ b/portfolio.html
@@ -10,68 +10,68 @@
   <body>
     <!-- Шапка -->
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="logo"> <span class="logo-text">Web</span>Studio</a>
+        <ul class="list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list-contact">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-
+    <!-- основний контент -->
     <main>
       <section class="section">
         <h1>Ресурси веб-студії</h1>
         <h2>Фільтри</h2>
         <ul>
           <li>
-            <button type="button">Усі</button>
+            <button type="button" class="section-button">Усі</button>
           </li>
           <li>
-            <button type="button">Веб-сайти</button>
+            <button type="button" class="section-button">Веб-сайти</button>
           </li>
           <li>
-            <button type="button">Додатки</button>
+            <button type="button" class="section-button">Додатки</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button type="button" class="section-button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button type="button" class="section-button">Маркетинг</button>
           </li>
         </ul>
         <h2>Перелік ресурсів</h2>
-        <ul>
+        <ul class="list">
           <li>
             <a href=""
               ><img src="./images/technokr.jpg" alt="Веб-сайт технокряк" width="370" />
-              <h3>Технокряк</h3>
+              <h3 class="list-title">Технокряк</h3>
               <p class="section-text">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/poster.jpg" alt="Постер два баскетболісти з м'ячем" width="370" />
-              <h3>Постер New Orlean vs Golden Star</h3>
+              <h3 class="list-title">Постер New Orlean vs Golden Star</h3>
               <p class="section-text">Дизайн</p>
             </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/restaurant.jpg" alt="Логотип ресторану Сіфуд" width="370" />
-              <h3>Ресторан Seafood</h3>
+              <h3 class="list-title">Ресторан Seafood</h3>
               <p class="section-text">Додаток</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/headphones.jpg" alt="Навушники чорного кольору" width="370" />
-              <h3>Проєкт Prime</h3>
+              <h3 class="list-title">Проєкт Prime</h3>
               <p class="section-text">Маркетинг</p></a
             >
           </li>
@@ -82,14 +82,14 @@
                 alt="Одна коробочка білого кольору друга коробочка тілесного кольору"
                 width="370"
               />
-              <h3>Проєкт Boxes</h3>
+              <h3 class="list-title">Проєкт Boxes</h3>
               <p class="section-text">Додаток</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/monitor.jpg" alt="Монітор комп'ютера" width="370" />
-              <h3>Inspiration has no Borders</h3>
+              <h3 class="list-title">Inspiration has no Borders</h3>
               <p class="section-text">Веб-сайт</p></a
             >
           </li>
@@ -100,21 +100,21 @@
                 alt="Розгорнутий журнал Limited Edition"
                 width="370"
               />
-              <h3>Видання Limited Edition</h3>
+              <h3 class="list-title">Видання Limited Edition</h3>
               <p class="section-text">Дизайн</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/birka.jpg" alt="Бірка LAB" width="370" />
-              <h3>Проєкт LAB</h3>
+              <h3 class="list-title">Проєкт LAB</h3>
               <p class="section-text">Маркетинг</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/notebook.jpg" alt="Робота людини за ноутбуком" width="370" />
-              <h3>Growing Business</h3>
+              <h3 class="list-title">Growing Business</h3>
               <p class="section-text">Додаток</p></a
             >
           </li>
@@ -122,15 +122,17 @@
       </section>
     </main>
     <!--Підвал-->
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
       <address>
         <ul>
           <li>
-            <a href="#">м. Київ, пр-т Лесі Українки, 26 <br /></a>
+            <a href="#" class="footer-address">м. Київ, пр-т Лесі Українки, 26 <br /></a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
-          <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a><br />
+          </li>
+          <li><a href="tel:380961111111" class="footer-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
