--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка Студія-->
     <header>
       <nav class="site-nav">
-        <a href="./index.html" class="logo"> <span class="logo-text">Web</span>Studio</a>
-        <ul class="list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+        <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+        <ul class="list-nav">
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list-contact">
@@ -30,38 +34,38 @@
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <!--Переваги студії-->
-      <section class="section">
-        <h2>Переваги Студії</h2>
+      <section class="advantages">
+        <h2 hidden>Переваги Студії</h2>
         <ul>
           <li>
-            <h3>Увага до деталей</h3>
-            <p class="section-text">
+            <h3 class="advantages-title">Увага до деталей</h3>
+            <p class="advantages-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
-            <p class="section-text">
+            <h3 class="advantages-title">Пунктуальність</h3>
+            <p class="advantages-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
-            <p class="section-text">
+            <h3 class="advantages-title">Планування</h3>
+            <p class="advantages-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
-            <p class="section-text">
+            <h3 class="advantages-title">Сучасні технології</h3>
+            <p class="advantages-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємось-->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -87,39 +91,45 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section class="section team">
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/igor.jpg" alt="Співробітник компанії Ігор Дем'яненко" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p class="section-text">Product Designer</p>
+            <h3 class="title-name">Ігор Дем'яненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga.jpg" alt="Співробітник компанії Ольга Рєпіна" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p class="section-text">Frontend Developer</p>
+            <h3 class="title-name">Ольга Рєпіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/mikola.jpg" alt="Співробітник компанії Микола Тарасов" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p class="section-text">Marketing</p>
+            <h3 class="title-name">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/micha.jpg" alt="Співробітник компанії Михайло Єрмаков" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p class="section-text">UI Designer</p>
+            <h3 class="title-name">Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
-      <address>
+      <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+      <address class="footer-address">
         <ul>
           <li>
-            <a href="#" class="footer-address">м. Київ, пр-т Лесі Українки, 26 <br /></a>
+            <a
+              href="https://goo.gl/maps/YVGoE1bEiSxg67Ht5"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="footer-link footer-color"
+              >м. Київ, пр-т Лесі Українки, 26<br
+            /></a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a><br />
