--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
     <header>
-      <nav class="nav">
-        <a href="./index.html" class="logo"> <span class="logo-text">Web</span>Studio</a>
-        <ul class="list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+      <nav class="site-nav">
+        <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+        <ul class="list-nav">
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list-contact">
@@ -25,54 +29,52 @@
     </header>
     <!-- основний контент -->
     <main>
-      <section class="section">
-        <h1>Ресурси веб-студії</h1>
-        <h2>Фільтри</h2>
+      <section class="projects">
+        <h1 hidden>Проекти</h1>
         <ul>
           <li>
-            <button type="button" class="section-button">Усі</button>
+            <button type="button" class="projects-button">Усі</button>
           </li>
           <li>
-            <button type="button" class="section-button">Веб-сайти</button>
+            <button type="button" class="projects-button">Веб-сайти</button>
           </li>
           <li>
-            <button type="button" class="section-button">Додатки</button>
+            <button type="button" class="projects-button">Додатки</button>
           </li>
           <li>
-            <button type="button" class="section-button">Дизайн</button>
+            <button type="button" class="projects-button">Дизайн</button>
           </li>
           <li>
-            <button type="button" class="section-button">Маркетинг</button>
+            <button type="button" class="projects-button">Маркетинг</button>
           </li>
         </ul>
-        <h2>Перелік ресурсів</h2>
-        <ul class="list">
+        <ul class="projects-list">
           <li>
             <a href=""
               ><img src="./images/technokr.jpg" alt="Веб-сайт технокряк" width="370" />
-              <h3 class="list-title">Технокряк</h3>
-              <p class="section-text">Веб-сайт</p>
+              <h2 class="projects-title">Технокряк</h2>
+              <p class="projects-text">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/poster.jpg" alt="Постер два баскетболісти з м'ячем" width="370" />
-              <h3 class="list-title">Постер New Orlean vs Golden Star</h3>
-              <p class="section-text">Дизайн</p>
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-text">Дизайн</p>
             </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/restaurant.jpg" alt="Логотип ресторану Сіфуд" width="370" />
-              <h3 class="list-title">Ресторан Seafood</h3>
-              <p class="section-text">Додаток</p></a
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-text">Додаток</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/headphones.jpg" alt="Навушники чорного кольору" width="370" />
-              <h3 class="list-title">Проєкт Prime</h3>
-              <p class="section-text">Маркетинг</p></a
+              <h2 class="projects-title">Проєкт Prime</h2>
+              <p class="projects-text">Маркетинг</p></a
             >
           </li>
           <li>
@@ -82,15 +84,15 @@
                 alt="Одна коробочка білого кольору друга коробочка тілесного кольору"
                 width="370"
               />
-              <h3 class="list-title">Проєкт Boxes</h3>
-              <p class="section-text">Додаток</p></a
+              <h2 class="projects-title">Проєкт Boxes</h2>
+              <p class="projects-text">Додаток</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/monitor.jpg" alt="Монітор комп'ютера" width="370" />
-              <h3 class="list-title">Inspiration has no Borders</h3>
-              <p class="section-text">Веб-сайт</p></a
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p class="projects-text">Веб-сайт</p></a
             >
           </li>
           <li>
@@ -100,22 +102,22 @@
                 alt="Розгорнутий журнал Limited Edition"
                 width="370"
               />
-              <h3 class="list-title">Видання Limited Edition</h3>
-              <p class="section-text">Дизайн</p></a
-            >
+              <h2 class="projects-title">Видання Limited Edition</h2>
+              <p class="projects-text">Дизайн</p>
+            </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/birka.jpg" alt="Бірка LAB" width="370" />
-              <h3 class="list-title">Проєкт LAB</h3>
-              <p class="section-text">Маркетинг</p></a
+              <h2 class="projects-title">Проєкт LAB</h2>
+              <p class="projects-text">Маркетинг</p></a
             >
           </li>
           <li>
             <a href=""
               ><img src="./images/notebook.jpg" alt="Робота людини за ноутбуком" width="370" />
-              <h3 class="list-title">Growing Business</h3>
-              <p class="section-text">Додаток</p></a
+              <h2 class="projects-title">Growing Business</h2>
+              <p class="projects-text">Додаток</p></a
             >
           </li>
         </ul>
@@ -123,11 +125,17 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
-      <address>
+      <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+      <address class="footer-address">
         <ul>
           <li>
-            <a href="#" class="footer-address">м. Київ, пр-т Лесі Українки, 26 <br /></a>
+            <a
+              href="https://goo.gl/maps/YVGoE1bEiSxg67Ht5"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="footer-link footer-color"
+              >м. Київ, пр-т Лесі Українки, 26<br
+            /></a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a><br />
