--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- Шапка Студія-->
     <header>
       <nav class="site-nav">
-        <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+        <a href="./index.html" class="nav-logo"><span class="logo-text">Web</span>Studio</a>
         <ul class="list-nav">
-          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./index.html" class="current">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
@@ -119,7 +119,7 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo"><span class="logo-text">Web</span>Studio</a>
       <address class="footer-address">
         <ul>
           <li>
