--- a/portfolio.html
+++ b/portfolio.html
@@ -15,10 +15,10 @@
     <!-- Шапка -->
     <header>
       <nav class="site-nav">
-        <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+        <a href="./index.html" class="nav-logo"><span class="logo-text">Web</span>Studio</a>
         <ul class="list-nav">
           <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="current">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -125,7 +125,7 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo"><span class="logo-text">Web</span>Studio</a>
       <address class="footer-address">
         <ul>
           <li>
