--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- Шапка Студія-->
-    <header>
+    <header class="header">
       <div class="container">
         <nav class="site-nav">
           <a href="./index.html" class="nav-logo"><span class="logo-text">Web</span>Studio</a>
